{
    "name": "Control",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "4ed51b50-384d-41eb-8fd4-0e7179d74d5d",
            "actions": [
                {
                    "name": "PointerPosition",
                    "type": "Value",
                    "id": "c3f41a95-cf15-40e3-afa6-3c2b532a32ce",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "f711b017-3bbe-4f01-978a-c3f08f2657df",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9c4b5dbb-7715-42c7-9586-eb78f600f9f6",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bacc616c-fa65-4ed7-aa9b-330007b23b6d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}